5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1593_2425.log
== TEST (2019-03-26 10:30:57) 
-- CODE:
a = float(input("distancia em km: "))
b = float(input("quantidade de combustivel em litros: "))
consumo = a/b
print(consumo "km/l")
-- ERROR:
File "XXXX", line 4
    print(consumo "km/l")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:31:23) 
-- CODE:
a = float(input("distancia em km: "))
b = float(input("quantidade de combustivel em litros: "))
consumo = a/b
print("consumo km/l")
-- OUTPUT:
consumo km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:08) 
-- CODE:
a = float(input("distancia em km: "))
b = float(input("quantidade de combustivel em litros: "))
consumo = a/b
print(consumo ++ "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(consumo ++ "km/l")
TypeError: bad operand type for unary +: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:27) 
-- CODE:
a = float(input("distancia em km: "))
b = float(input("quantidade de combustivel em litros: "))
consumo = a/b
print(consumo + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(consumo + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:35:20) 
-- CODE:
a = float(input("distancia em km: "))
b = float(input("quantidade de combustivel em litros: "))
consumo = a/b
print(consumo, "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:36:50) 
-- CODE:
a = float(input("distancia em km: "))
b = float(input("quantidade de combustivel em litros: "))
consumo = a/b
print((round(consumo, 3)), "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:37:01) 
-- CODE:
a = float(input("distancia em km: "))
b = float(input("quantidade de combustivel em litros: "))
consumo = a/b
print((round(consumo, 3)), "km/l")
-- EXECUTION TIME:
0.163114
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
